locator spring config